fix judment navigation bar on small breakpoints

--- a/ds_judgements_public_ui/sass/includes/_document_navigation_links.scss
+++ b/ds_judgements_public_ui/sass/includes/_document_navigation_links.scss
@@ -27,7 +27,7 @@
       top: 0;
       background-color: $color__white;
       box-sizing: border-box;
-      width: 100%;
+      width: 100vw;
       justify-content: space-between;
       margin: 0;
       box-shadow: $color__dark-grey 1px 1px 6px;
@@ -37,7 +37,7 @@
       row-gap: $spacer__unit;
       column-gap: $spacer__unit;
       @media (max-width: $grid__breakpoint-medium) {
-        column-gap: calc(0.5 * $spacer__unit);
+        column-gap: 0;
       }
 
       .up-wrapper {
@@ -61,7 +61,7 @@
       &.with-query {
         grid-template-columns: 1fr 1fr auto 1fr 1fr;
         @media (max-width: $grid__breakpoint-medium) {
-          grid-template-columns: 1fr 3fr 1fr;
+          grid-template-columns: 2fr 4fr 2fr;
           grid-template-rows: 2fr;
         }
 
