--- a/ds_judgements_public_ui/sass/includes/_layout.scss
+++ b/ds_judgements_public_ui/sass/includes/_layout.scss
@@ -25,3 +25,7 @@ body {
 .container {
   @include container;
 }
+
+#main-content {
+  overflow-x: hidden;
+}
